[tool.poetry]
name = "enrich-coy-profile-proxycurl"
version = "0.1.0"
description = "Bulk enrich Linkedin Company Profiles"
authors = ["Nubela Pte Ltd"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
